--- a/postcard/Base.lproj/Main.storyboard
+++ b/postcard/Base.lproj/Main.storyboard
@@ -104,6 +104,15 @@
                                     <rect key="frame" x="16" y="72" width="337" height="83"/>
                                 </variation>
                             </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AdH-Mk-b4i">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="179" width="249" height="21"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -113,6 +122,7 @@
                                 <exclude reference="NPK-qV-hFq"/>
                                 <exclude reference="ImM-Ol-hdV"/>
                                 <exclude reference="dJl-yk-4Qr"/>
+                                <exclude reference="AdH-Mk-b4i"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -122,6 +132,7 @@
                                 <include reference="NPK-qV-hFq"/>
                                 <include reference="ImM-Ol-hdV"/>
                                 <include reference="dJl-yk-4Qr"/>
+                                <include reference="AdH-Mk-b4i"/>
                             </mask>
                         </variation>
                     </view>
@@ -130,6 +141,7 @@
                         <outlet property="enterNameTextField" destination="W4L-4v-Jyj" id="V7z-QO-pY3"/>
                         <outlet property="mailButton" destination="ImM-Ol-hdV" id="M33-mV-Ueu"/>
                         <outlet property="messageLabel" destination="dJl-yk-4Qr" id="Pyl-1u-66R"/>
+                        <outlet property="nameLabel" destination="AdH-Mk-b4i" id="ZvK-AN-TEt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
